# My_notes

C++/: C++.md
C++/codes/: T01.cpp  T03.cpp  T04.cpp  T05.cpp  T06.cpp  T08.cpp  T09.cpp  T10.cpp  T11.cpp
Cmakes/: Cmakes.md  json文件.md
Cmakes/Myproject/: CMakeLists.txt
Cmakes/Myproject/src/: CMakeLists.txt  main.cpp
Cmakes/Myproject/src/include/: mylib.h
Cmakes/Myproject/src/lib/: module2.cpp
Cmakes/Myproject/tests/: CMakeLists.txt  test_main.cpp
Freertos/: FreeRTOS.xmind  freertos.md
Git/: Git.md
Linux/精通Linux/: 精通Linux.xmind  精通Linux笔记.html  精通Linux笔记.md
Linux_IMX6ull/: imx6ull.md  遇到问题.md
Linux_IMX6ull/imx6ull系统移植篇/: imx6ull.md  遇到问题.md
Linux_IMX6ull/imx6ull裸机篇/: SD卡.md  imx6ull.html  imx6ull.md  补充.md  遇到问题.md
Makefile/: Makefile补充_linux.md  makefile.md  makefile函数.md
Makefile/code/: makefile
Makefile/code/src/: T02.c
Markdown高级技巧/: Markdown.md
OS_Network/计算机网络/: 第一章.xmind  第六章应用层.xmind
Problem/: problem.md
SSH/: ssh.md
STM32/: stm32_标准库.md
STM32/codes_标准库/: EXTI.md  GPIO.md  TIM.md
Shell/: shell.md
Shell/code/: .T25.sh.swp  T02.sh  T04.sh  T05.sh  T06.sh  T07.sh  T08.sh  T09.sh  T10.sh  T12.sh  T13.sh  T14.sh  T15.sh  T16.sh  T17.sh  T18.sh  T19.sh  T20.sh  T21.sh  T22.sh  T23.sh  T24.sh  T25.sh  T26.sh  T27.sh  T28.sh  T29.sh  T34.sh  T35.sh  addx.sh  test1.sh  test2.sh
linux_Command/: Command.md
linux_Command/code/: T01  T05.cpp  T05.txt  a.out  out
vim/: vim.md
计算机网络/: 第五章传输层.xmind
计算机网络/ai-network/: 字节串与Base64与UTF-8.docx  网络层.md  网络运营商.docx  蓝牙与耳机.docx
计算机网络/预习/: 网络是怎样连接的（第一章）探索浏览器内部.xmind
(+84 files in other folders)
